--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
         </table>
 <hr>
       </ul>
-    <ahref="hobbies.html">My Hobbies</a>
+    <ahref="Hobbies.html">My Hobbies</a>
   </body>
 </html>
