--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <title>♥ Denises'Personal Site!</title
     </head>
-  <body>
+  <body style="background-color:blue;">
     <table>
       <tr>
         <img src=""C:\Users\denise.griffin\Desktop\JavaScript basic\HTML site\bit emoji.png"" alt=""/>
