--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body style="background-color:#EAF6F6;">
     <table>
       <tr>
-        <img src=""C:\Users\denise.griffin\Desktop\JavaScript basic\HTML site\bit emoji.png"" alt=""/>
+        <img src="dg/images/bit emoji.png"" alt="/>
         <td><h1> Denise Griffin </td></h1>
         <td><p><em>IT Support Specialist</em>🖧</p></td>
       </tr>
