--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body style="background-color:#EAF6F6;">
     <table>
       <tr>
-        <td> <img src="images/bit emoji.png" alt="Denises profile picture"></td>
+        <td> <img src="images/my bitmoji no color.png" alt="Denises profile picture"></td>
         <td><h1> Denise Griffin </td></h1>
         <td><p><em>IT Support Specialist</em>🖧</p></td>
       </tr>
