--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <table>
       <tr>
         <td> <img src="images/my bitmoji no color.png" alt="Denises profile picture"></td>
-        <td><h1> Denise Griffin </td></h1>
+        <td><h1> Denise Griffin </td></h1><br>
         <td><p><em>IT Support Specialist</em>🖧</p></td>
       </tr>
     </table>
