--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 ﻿<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>♥ Denises'Personal Site!</title
+  <title>♥ Denises'Personal Site!</title>
+    
+    <style>
+    body{
+      background-color:#EAF6F6;
+    }
+    </style>
     </head>
-  <body style="background-color:#EAF6F6;">
+  <body>
     <table>
       <tr>
         <td> <img src="images/my bitmoji no color.png" alt="Denises profile picture"></td>
