--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     
     <style>
     body{
-      background-color:EAF6F6;
+      background-color:#EAF6F6;
     }
+      hr{
+      border-style;;
+      }
+      
     </style>
+  
+  
     </head>
   <body>
     <table>
