--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       background-color:#EAF6F6;
     }
       hr{
-      border-style;;
+        background-color: white;
+        border-style: none;
+        height:2px;
+        width: 30%;
       }
       
     </style>
