--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
       hr{
         background-color: white;
         border-style: none;
+        border-bottom-style:dotted;
+        border-left-style: none;
+        border-right-style: none;
+        border-top-style: none;
         height:2px;
-        width: 30%;
+        width: 15%;
+        
       }
       
     </style>
