--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     }
       hr{
         background-color: white;
-        border-style: none;
+        border-style: dotted;
         border-bottom-style:dotted;
         border-left-style: none;
         border-right-style: none;
