--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
       background-color:#EAF6F6;
     }
       hr{
-        background-color: white;
-        border-bottom-style:dotted;
-        border-left-style: none;
-        border-right-style: none;
-        border-top-style: none;
-        height:2px;
-        width: 15%;
-        
+       border-style: none;
+              border-top-style: dotted;
+              border-color: purple;
+              border-width: 5px;
+              width: 5%;
       }
       
     </style>
