--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       hr{
        border-style: none;
               border-top-style: dotted;
-              border-color: purple;
+              border-color: black;
               border-width: 5px;
               width: 5%;
       }
