--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
         <td><p><em> IT Support Specialist</em>  🖧</p></td>
       </tr>
     </table>
-    <hr size="3" noshade>
+    <hr size="3">
     <p>I have been in the IT field for over 10 years. I believe in sharing knowledge and empowering others in the information technology field.</p>
    <p> I especially like teaching and empowering women and seniors.</p>
     <hr size="3" noshade>
       <h3>Experience</h3
         <hr size="3>"
     <p>My degree is in Software Development and like most IT professionals, my first job was not in development.It was in IT Support.</p><p>I now have my CompTIA Security+ certifications and even though I have designed web sites in the past, I am doing the Web Development class as a refresher.</p>
-<hr size="3" noshade>
+<hr size="3">
         <h3>Education</h3>
       <ul>
         <li>Newbold Technologies </li>
         <li><em>CompTIA Security+ Certification</em></li>
         <li><em>Ethical Hacking Certification</em></li>
       <li><em>Complete 2020 Web Development Bootcamp by Angela Yu The App Brewery</em></li>
-  <hr size="3" noshade>
+  <hr size="3">
       
           <h3> Skills</h3>
       <table cellspacing="10px">
