--- a/index.html
+++ b/index.html
@@ -2,22 +2,8 @@
 <head>
   <meta charset="utf-8">
   <title>♥ Denises'Personal Site!</title>
+  <link rel="rel=stylesheet" href="css/styles.css">
     
-    <style>
-    body{
-      background-color:#EAF6F6;
-    }
-      hr{
-       border-style: none;
-              border-top-style: dotted;
-              border-color: black;
-              border-width: 5px;
-              width: 5%;
-      }
-      
-    </style>
-  
-  
     </head>
   <body>
     <table>
