--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>♥ Denises'Personal Site!</title>
-  <link rel="rel=stylesheet" href="css/styles.css">
+  <link rel="rel=stylesheet" href="/css/styles.css">
     
     </head>
   <body>
