--- a/ContactMe.html
+++ b/ContactMe.html
@@ -1,3 +1,10 @@
+﻿<!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <title>♥ Denises'Personal Site!</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
 <form action="mailto:deniseegriffin@yahoo.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
@@ -8,3 +15,5 @@
       <input type="submit" name=""><br>
      
     </form>
+</body>
+</html>
