--- a/ContactMe.html
+++ b/ContactMe.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>♥ Denises'Personal Site!</title>
+  <title>Contact Me</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <h1>Email Me</h1>
 <form action="mailto:deniseegriffin@yahoo.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
