--- a/Hobbies.html
+++ b/Hobbies.html
@@ -1,4 +1,11 @@
-﻿ <h3>Hobbies</h3>
+﻿﻿<!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <title>My Hobbies</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <h1>Hobbies</h1>
 
   <ol>
     <li>Painting </li>
@@ -8,6 +15,7 @@
   </ol>
   <hr>
 </body>
+</html>
 
 
 
