--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <tr>
         <td> <img src="images/my bitmoji no color.png" alt="Denises profile picture"></td>
         <td><h1> Denise Griffin </td></h1><br>
-        <td><p><em> IT Support Specialist</em>  🖧</p></td>
+      <td><p>IT Support Specialist 🖧</p></td>
       </tr>
     </table>
     <hr>
@@ -18,7 +18,7 @@
    <p> I especially like teaching and empowering women and seniors.</p>
     <hr>
       <h3>Experience</h3
-        <hr>"
+        <hr>
     <p>My degree is in Software Development and like most IT professionals, my first job was not in development.It was in IT Support.</p><p>I now have my CompTIA Security+ certifications and even though I have designed web sites in the past, I am doing the Web Development class as a refresher.</p>
 <hr>
         <h3>Education</h3>
