--- a/Hobbies.html
+++ b/Hobbies.html
@@ -1,7 +1,7 @@
-﻿﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>My Hobbies</title>
+  <title>Hobbies</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
