--- a/ContactMe.html
+++ b/ContactMe.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Email Me</h1>
-<form action="mailto:deniseegriffin@yahoo.com" method="post" enctype="text/plain">
+<form action="mailto:denisehhq@gmailcom" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
       <label>Your Email:</label>
