--- a/index.html
+++ b/index.html
@@ -1,54 +1,67 @@
 ﻿<!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <title>♥ Denises'Personal Site!</title>
   <link rel="stylesheet" href="css/styles.css">
     
-    </head>
-  <body>
-    <table>
-      <tr>
-        <td> <img src="images/my bitmoji no color.png" alt="Denises profile picture"></td>
-        <td><h1> Denise Griffin </td></h1><br>
-      <td><p>IT Support Specialist 🖧</p></td>
-      </tr>
-    </table>
-    <hr>
-    <p>I have been in the IT field for over 10 years. I believe in sharing knowledge and empowering others in the information technology field.</p>
-   <p> I especially like teaching and empowering women and seniors.</p>
-    <hr>
-      <h3>Experience</h3
+<head>
+    <script src="relativepath_ifnecessary/jsfilename.js"></script>
+    <meta charset="utf-8" />
+    <title>Denise Griffin</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" href="favicon.ico">
+
+</head>
+<body>
+    <div class="top-container">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <h1>I'm Denise</h1>
+        <h2>an IT Support Specialist.</h2>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
+
+    </div>
+
+    <div class="middle-container">
+        <div class="profile">
+            <img src="images/thmpsup.png" alt="thumps up emoji">
+            <h2>Hello.</h2>
+            <p class="intro">I am an IT Support Specialist and Programmer and Chocolate 🍫 is my goto vegetable.</p>
+        </div>
         <hr>
-    <p>My degree is in Software Development and like most IT professionals, my first job was not in development.It was in IT Support.</p><p>I now have my CompTIA Security+ certifications and even though I have designed web sites in the past, I am doing the Web Development class as a refresher.</p>
-<hr>
-        <h3>Education</h3>
-      <ul>
-        <li>Newbold Technologies </li>
-        <li><em>CompTIA Security+ Certification</em></li>
-        <li><em>Ethical Hacking Certification</em></li>
-      <li><em>Complete 2020 Web Development Bootcamp by Angela Yu The App Brewery</em></li>
-  <hr>
-      
-          <h3> Skills</h3>
-      <table cellspacing="10px">
-        <tr>
-           <tr>
-             <td>Java </td>
-             <td>⭐</td>
- 
-             <td>Python</td>
-             <td>⭐</td>
-        </tr>
-            <tr>
-              <td>HTML</td>
-              <td>⭐⭐⭐</td>
-             <td>CSS <td>
-             <td>⭐⭐</td>
-             </tr>
-        </tr>
-        </table>
-<hr>
-      </ul>
-    <ahref="Hobbies.html">My Hobbies</a>
-  </body>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="tools" src="images/tools.png" alt="image of tools on monitor">
+                <h3>IT Support Specialist</h3>
+                <p>As an IT Support Specialist- Technical Skills include administrator technlogies - Operating systems, applications, networking tools, systems and devices.</p>
+
+            </div>
+            <div class="skill-row">
+                <img class="laptop" src="images/laptop.png" alt="">
+                <h3>Technical Support Skills</h3>
+                <p>Computer Repair and Maintenance. Updates,Installation of OS, and Virus Removal!</p>
+            </div>
+            <div class="skill-row">
+                <img class="monitor" src="images/monitor.png" alt="">
+                <h3>Programmer Skills</h3>
+                <p> As a Programmer my skills include Webpages and Databases design!</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Email Me.</h3>
+            <p>Message me at the link below.</p>
+            <a class="btn" href="mailto:denisehhq@gmail.com">CONTACT ME</a>
+        </div>
+    </div>
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <p class="copyright">© 2018 Denise Griffin.</p>
+    </div>
+
+</body>
 </html>
